# djgent

./: .gitignore  .pypirc.example  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  pytest.ini
djgent/: __init__.py  admin.py  apps.py  audit.py  cache.py  chains.py  exceptions.py  models.py  settings.py
djgent/agents/: __init__.py  base.py  multi_agent.py
djgent/chat/: __init__.py  apps.py  urls.py  views.py
djgent/chat/static/djgent/: chat.css  chat.js  chat_bubble.css  chat_bubble.js
djgent/chat/templates/djgent/: _chat_stage.html  chat.html  chat_bubble.html  chat_embed.html
djgent/chat/templatetags/: __init__.py  djgent_chat.py
djgent/llm/: __init__.py  config.py  providers.py
djgent/management/: __init__.py
djgent/management/commands/: djgent_clear_conversations.py  djgent_create_conversation.py  djgent_export_conversation.py  djgent_list_conversations.py
djgent/memory/: __init__.py  backends.py  base.py  store.py  utils.py
djgent/migrations/: 0001_initial.py  0002_runtime_memory_and_retrieval.py  0003_message_and_conversation_usage.py  0004_rename_djgent_know_namespace_fcc6de_idx_djgent_know_namespa_a74548_idx_and_more.py  0005_auditlog.py  0006_human_interaction_langgraph_checkpoint.py
djgent/retrieval/: __init__.py  base.py  tools.py
djgent/runtime/: __init__.py  approvals.py  checkpoint.py  human.py  langchain_middleware.py  mcp.py  middleware.py  rate_limit.py  schemas.py  state.py
djgent/serializers/: __init__.py  model.py
djgent/tools/: __init__.py  base.py  decorators.py  registry.py  schemas.py
djgent/tools/builtin/: __init__.py  calculator.py  datetime_tool.py  django_auth.py  django_model.py  http_tool.py  memory_store.py  search.py  weather.py
djgent/utils/: __init__.py  agent_runner.py  checks.py  django_context.py  helpers.py  model_introspection.py  public_models.py  usage.py
docs/: CHAT_UI.md  MCP.md  MIDDLEWARE.md  MODEL_QUERY_TOOL.md  MULTI_AGENT.md  PERSISTENT_MEMORY.md
example/: .env.example  manage.py
example/chat_ui/: apps.py  urls.py  views.py
example/chat_ui/static/chat_ui/: chat.css  chat.js
example/chat_ui/templates/chat_ui/: chat.html
example/demo_app/: admin.py  apps.py  models.py  public_models.py  tools.py  urls.py  views.py
example/demo_app/management/commands/: seed_demo_data.py
example/demo_app/migrations/: 0001_initial.py
example/demo_app/templates/demo_app/: base.html  home.html
example/test_project/: README.md  settings.py  urls.py
tests/: __init__.py  chat_urls.py  conftest.py  custom_chat_urls.py  custom_chat_views.py  custom_root_urls.py  test_agent.py  test_audit_integration.py  test_chat_bubble.py  test_chat_ui.py  test_human_interaction.py  test_memory.py  test_model_query_pydantic.py  test_model_query_safety.py  test_tools.py
tests/auto_tools_app/: __init__.py  tools.py
